<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.sencha.gxt</groupId>
  <artifactId>gxt-integration-tests</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <properties>
    <selenium.version>2.44.0</selenium.version>
    <selenium.skip>false</selenium.skip>
    <gwt.test.testTimeOut>480</gwt.test.testTimeOut>

    <gwt.version>2.7.0</gwt.version>
    <gxt.version>3.0.1</gxt.version>

    <gwt.driver.version>0.0.1-SNAPSHOT</gwt.driver.version>
    <gxt.driver.version>0.0.1-SNAPSHOT</gxt.driver.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <!-- Integration testing which runs classes *TestInt.java -->
      <!-- run 'mvn integration-test -Pintegration-test' -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.12</version>
        <executions>
          <execution>
            <id>integration-test</id>
            <phase>integration-test</phase>
            <goals>
              <goal>integration-test</goal>
            </goals>
            <configuration>
              <skip>${selenium.skip}</skip>
              <includes>
                <include>**/*TestInt.java</include>
              </includes>
              <classpathDependencyExcludes>
                <classpathDependencyExclude>com.google.gwt:gwt-dev</classpathDependencyExclude>
              </classpathDependencyExcludes>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <versionRange>[1.0.0,)</versionRange>
                    <goals>
                      <goal>enforce</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore />
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>headless</id>
      <properties>
        <selenium.skip>true</selenium.skip>
      </properties>
    </profile>

    <profile>
      <id>all-tests</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>gwt-maven-plugin</artifactId>
            <executions>
              <execution>
                <phase>prepare-package</phase>
                <goals>
                  <goal>compile</goal>
                </goals>
              </execution>

              <execution>
                <id>smoke-test</id>
                <phase>test</phase>
                <goals>
                  <goal>test</goal>
                </goals>
                <configuration>
                  <testTimeOut>${gwt.test.testTimeOut}</testTimeOut>
                  <mode>htmlunit</mode>
                  <extraJvmArgs>-Xmx2g -XX:MaxPermSize=1g</extraJvmArgs>
                  <!-- hack to make it take more time -->
                  <htmlunit>FF17 -testMethodTimeout 15</htmlunit>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <repositories>
    <repository>
      <id>archetype</id>
      <name>Sencha GXT Archetypes</name>
      <url>https://maven.sencha.com/repo/gxt-gpl-release/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.senchalabs.gwt</groupId>
      <artifactId>gwt-driver</artifactId>
      <version>${gwt.driver.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.senchalabs.gwt</groupId>
      <artifactId>gxt-driver</artifactId>
      <version>${gxt.driver.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- Used for finding the widgets -->
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-user</artifactId>
      <version>${gwt.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.sencha.gxt</groupId>
      <artifactId>gxt</artifactId>
      <version>${gxt.version}</version>
    </dependency>
    <dependency>
      <groupId>com.sencha.gxt</groupId>
      <artifactId>gxt-chart</artifactId>
      <version>${gxt.version}</version>
    </dependency>

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium.version}</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-server</artifactId>
      <version>${selenium.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

</project>
